--- a/WarmCoffe/src/GUI/EventsListView.form
+++ b/WarmCoffe/src/GUI/EventsListView.form
@@ -130,6 +130,7 @@
                   <Font name="Yu Gothic Light" size="12" style="0"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="Asistir&#xe9;"/>
+                <Property name="enabled" type="boolean" value="false"/>
               </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
